--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-scroll": "^1.5.4"
   },
   "engines": {
     "node": "8.2.1"
