--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-headroom": "^2.1.6",
     "react-scroll": "^1.5.4"
   },
   "engines": {
